Fix z-index bug by increasing/setting it on the dropdown list

--- a/src/components/SelectField/SelectField.sass
+++ b/src/components/SelectField/SelectField.sass
@@ -39,6 +39,7 @@
   list-style: none
   padding: 0
   margin: 0
+  z-index: $high
   display: none
   &.open
     display: block
